--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,15 @@
           <li>Contacto</li>
         </ul>
       </nav>
-      <nav class="mobile">
-        <ul>
-          <li>¿Qué hacemos?</li>
-          <li>Proyectos</li>
-          <li>Contacto</li>
-        </ul>
+    
       </nav>
       <div>
         <div>
-          <h1>Incrementa tus GANANCIAS</h1>
+          <h1>Incrementa tus GANANCIAS.</h1>
           <p>Tenemos la solucion que buscas.</p>
           <p>Nosotros tenemos tu solucion.</p>
         </div>
-        <div>
-          <img src="" alt="" />
-        </div>
+
       </div>
     </header>
   </body>
