Agregado soporte dpara video y video

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <video loop autoplay src="./assets/yaya.mp4"></video>
       <nav>
         <ul>
           <li>¿Qué hacemos?</li>
