--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <video loop autoplay src="./assets/yaya.mp4"></video>
       <nav>
         <ul>
-          <li>¿Qué hacemos?</li>
+          <li><a href="#">¿Qué hacemos?</a></li>
           <li>Proyectos</li>
           <li>Contacto</li>
         </ul>
