oh no, repampanos

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <ul>
-          <li>¿Qué hacemos?</li>
+          <li>GOOGLE</li>
           <li>Proyectos</li>
           <li>Contacto</li>
         </ul>
